WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 223347
webgl/2.0.1/conformance2/extensions/ext-texture-filter-anisotropic.html fails
https://bugs.webkit.org/show_bug.cgi?id=223347
Summary
webgl/2.0.1/conformance2/extensions/ext-texture-filter-anisotropic.html fails
Kimmo Kinnunen
Reported
2021-03-17 00:34:13 PDT
webgl/2.0.1/conformance2/extensions/ext-texture-filter-anisotropic.html fails
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2021-03-17 01:06:07 PDT
https://www.khronos.org/registry/webgl/sdk/tests/conformance/extensions/ext-texture-filter-anisotropic.html?webglVersion=2&quiet=0&quick=1
Passes in browser, fails in tests?
Kimmo Kinnunen
Comment 2
2021-03-17 01:45:51 PDT
At least macOS 11.3, iMacPro1,1, Radeon Pro Vega 56
Radar WebKit Bug Importer
Comment 3
2021-03-24 00:35:29 PDT
<
rdar://problem/75774215
>
EWS
Comment 4
2022-07-27 22:37:36 PDT
Committed
252895@main
(bc8dca88d7db): <
https://commits.webkit.org/252895@main
> Reviewed commits have been landed. Closing PR #2042 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug